[package]
name = "twitchlink"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = { version = "0.11.12", default-features = false, features = ["json", "blocking", "cookies", "rustls-tls"] }
dirs = "5.0.0"
regex = "1.0.0"
